--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "chart.js": "^2.9.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "~3.7.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.7",
@@ -44,7 +45,8 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~5.18.0"
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5"
   },
   "engines": {
     "node": "~14.15.4",
