--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
+    "@angular/compiler-cli": "^11.2.8",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
     "@angular/material": "^9.2.4",
@@ -26,16 +27,16 @@
     "chart.js": "^2.9.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.7",
     "@angular/cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -53,5 +54,4 @@
     "node": "~14.15.4",
     "npm": "~7.8.0"
   }
-
 }
