--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node serve.js",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "9.0.7",
     "@angular/router": "9.0.7",
     "chart.js": "2.9.4",
+    "express": "^4.17.1",
     "rxjs": "6.5.4",
     "tslib": "1.10.0",
     "typescript": "3.7.5",
@@ -35,6 +36,7 @@
     "@angular/language-service": "9.0.7",
     "@types/jasmine": "3.5.0",
     "@types/jasminewd2": "2.0.3",
+    "@types/jest": "^26.0.22",
     "@types/node": "12.11.1",
     "codelyzer": "5.1.2",
     "jasmine-core": "3.5.0",
