--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node serve.js",
+    "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "9.0.7",
     "@angular/cdk": "9.2.4",
     "@angular/common": "9.0.7",
-    "@angular/compiler": "9.0.0",
-    "@angular/compiler-cli": "9.0.0",
+    "@angular/compiler": "^9.0.0",
     "@angular/core": "9.0.7",
     "@angular/forms": "9.0.7",
     "@angular/material": "9.2.4",
@@ -24,19 +22,19 @@
     "@angular/platform-browser-dynamic": "9.0.7",
     "@angular/router": "9.0.7",
     "chart.js": "2.9.4",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "rxjs": "6.5.4",
     "tslib": "1.10.0",
-    "typescript": "3.7.5",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.7",
-    "@angular/cli": "9.0.0",
+    "@angular/cli": "^9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
     "@angular/language-service": "9.0.7",
     "@types/jasmine": "3.5.0",
     "@types/jasminewd2": "2.0.3",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "26.0.22",
     "@types/node": "12.11.1",
     "codelyzer": "5.1.2",
     "jasmine-core": "3.5.0",
@@ -49,10 +47,6 @@
     "protractor": "5.4.3",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
-    "typescript": "3.7.5"
-  },
-  "engines": {
-    "node": "14.15.4",
-    "npm": "7.8.0"
+    "typescript": "^3.6.4"
   }
 }
